--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div>
+    <h1>
+      Scavenger Hunt!
+    </h1>
   </div>
-</ion-content>
+
+  <div>
+    <p>Allow these functions to continue:</p>
+  </div>
+
+  <ion-button class="cam-loc-btn">
+    <ion-icon slot="start" name="camera-outline"></ion-icon>
+    Camera
+  </ion-button>
+
+  <ion-button class="cam-loc-btn">
+    <ion-icon slot="start" name="location-outline"></ion-icon>
+    Location
+  </ion-button>
+
+
+  <ion-item-divider/>
+
+  <ion-button class="start-btn">
+    Start the scavenger hunt!
+  </ion-button>
+
+  <ion-button class="cancel-button">
+    Cancel
+  </ion-button>
