--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,39 @@
-#container {
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+p {
+  font-size: 1.2em;
+  margin-bottom: 20px;
 }
 
-#container a {
-  text-decoration: none;
+ion-button {
+  display: block;
+  margin: 10px auto;
+  width: 80%;
+}
+
+.cancel-button {
+  --background: lightcoral;
+}
+
+.start-btn {
+  --background: #2596be;
+}
+
+.cam-loc-btn {
+  --background: grey;
+}
+
+ion-item-divider {
+  margin: 20px 0;
 }
