--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,32 +1,36 @@
-  <div>
-    <h1>
-      Scavenger Hunt!
-    </h1>
-  </div>
+<div>
+  <h1>
+    Scavenger Hunt!
+  </h1>
+</div>
 
-  <div>
-    <p>Allow these functions to continue:</p>
-  </div>
+<div>
+  <p>Allow these functions to continue:</p>
+</div>
 
-  <ion-button
-    (click)="requestPermissions()"
-    [ngClass]="{'btn-green': hasCameraAccess(), 'cam-loc-btn': !hasCameraAccess()}">
-    <ion-icon slot="start" name="camera-outline"></ion-icon>
-    Camera
-  </ion-button>
+<ion-button
+  (click)="requestCameraPermission()"
+  [ngClass]="{'btn-green': hasCameraAccess(), 'cam-loc-btn': !hasCameraAccess()}">
+  <ion-icon slot="start" name="camera-outline"></ion-icon>
+  Camera
+</ion-button>
 
-  <ion-button class="cam-loc-btn">
-    <ion-icon slot="start" name="location-outline"></ion-icon>
-    Location
-  </ion-button>
+<ion-button class="cam-loc-btn" (click)="requestLocationPermission()"
+            [ngClass]="{'btn-green': hasLocationAccess(), 'cam-loc-btn': !hasLocationAccess()}">
+  <ion-icon slot="start" name="location-outline"></ion-icon>
+  Location
+</ion-button>
 
+<ion-item-divider/>
 
-  <ion-item-divider/>
+<ion-button class="start-btn"
+            [disabled]="!hasPermissions()"
+            [ngClass]="{'start-btn': hasPermissions(), 'start-btn-disabled': !hasPermissions()}"
+            (click)="navigateToStartHunt()"
+>
+  Continue
+</ion-button>
 
-  <ion-button class="start-btn">
-    Start the scavenger hunt!
-  </ion-button>
-
-  <ion-button class="cancel-button">
-    Cancel
-  </ion-button>
+<ion-button [disabled]="true" class="cancel-button">
+  Cancel
+</ion-button>
