--- a/src/app/task-2/task-2.page.html
+++ b/src/app/task-2/task-2.page.html
@@ -19,6 +19,7 @@
   Continue
 </ion-button>
 
-<ion-button [disabled]="false" class="cancel-button">
+<ion-button [disabled]="false" class="cancel-button"
+            (click)="backToStart()">
   Cancel
 </ion-button>
