Add task 3 page

--- a/src/app/task-3/task-3.page.html
+++ b/src/app/task-3/task-3.page.html
@@ -18,8 +18,7 @@
 
 <ion-button class="start-btn" [disabled]="!isCompleted"
             [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': !isCompleted}"
-            (click)="navigateToTask4()"
->
+            (click)="navigateToTask4()">
   Continue
 </ion-button>
 
