--- a/src/app/task-3/task-3.page.scss
+++ b/src/app/task-3/task-3.page.scss
@@ -5,6 +5,7 @@
   height: 100%;
   text-align: center;
 }
+
 .scanner-active {
   background: transparent !important;
 }
@@ -37,6 +38,10 @@ body.scanner-active::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8); /* Adjust opacity if needed */
+  background: rgba(0, 0, 0, 0.8);
   pointer-events: none;
+}
+
+body.scanner-active *:not(.scanner-active, .scanner-active *) {
+  display: none !important;
 }
