--- a/src/app/task-3/task-3.page.html
+++ b/src/app/task-3/task-3.page.html
@@ -22,6 +22,7 @@
   Continue
 </ion-button>
 
-<ion-button [disabled]="false" class="cancel-button">
+<ion-button [disabled]="false" class="cancel-button"
+            (click)="backToStart()">
   Cancel
 </ion-button>
