--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,5 @@
 <div>
-  <h1>
-    Scavenger Hunt!
-  </h1>
+  <h1>Scavenger Hunt!</h1>
 </div>
 
 <div>
@@ -10,27 +8,30 @@
 
 <ion-button
   (click)="requestCameraPermission()"
-  [ngClass]="{'btn-green': hasCameraAccess(), 'cam-loc-btn': !hasCameraAccess()}">
+  [ngClass]="{'btn-green': hasCameraAccess(), 'cam-loc-btn': !hasCameraAccess()}"
+>
   <ion-icon slot="start" name="camera-outline"></ion-icon>
   Camera
 </ion-button>
 
-<ion-button class="cam-loc-btn" (click)="requestLocationPermission()"
-            [ngClass]="{'btn-green': hasLocationAccess(), 'cam-loc-btn': !hasLocationAccess()}">
+<ion-button
+  class="cam-loc-btn"
+  (click)="requestLocationPermission()"
+  [ngClass]="{'btn-green': hasLocationAccess(), 'cam-loc-btn': !hasLocationAccess()}"
+>
   <ion-icon slot="start" name="location-outline"></ion-icon>
   Location
 </ion-button>
 
-<ion-item-divider/>
+<ion-item-divider />
 
-<ion-button class="start-btn"
-            [disabled]="!hasPermissions()"
-            [ngClass]="{'start-btn': hasPermissions(), 'start-btn-disabled': !hasPermissions()}"
-            (click)="navigateToStartHunt()"
+<ion-button
+  class="start-btn"
+  [disabled]="!hasPermissions()"
+  [ngClass]="{'start-btn': hasPermissions(), 'start-btn-disabled': !hasPermissions()}"
+  (click)="navigateToStartHunt()"
 >
   Continue
 </ion-button>
 
-<ion-button [disabled]="true" class="cancel-button">
-  Cancel
-</ion-button>
+<ion-button [disabled]="true" class="cancel-button"> Cancel </ion-button>
