--- a/src/app/scoreboard/scoreboard.page.html
+++ b/src/app/scoreboard/scoreboard.page.html
@@ -1,7 +1,5 @@
 <div>
-  <h1>
-    Scoreboard:
-  </h1>
+  <h1>Scoreboard:</h1>
 </div>
 <ion-list>
   <ion-item *ngFor="let run of topRuns; let i = index">
@@ -11,12 +9,10 @@
 
 <ion-item-divider></ion-item-divider>
 
-<ion-button class="start-btn"
-            (click)="navigateToStart()">
+<ion-button class="start-btn" (click)="navigateToStart()">
   Back to the Start
 </ion-button>
 
-<ion-button [disabled]="false" class="start-btn"
-            (click)="navigateToHome()">
+<ion-button [disabled]="false" class="start-btn" (click)="navigateToHome()">
   Home
 </ion-button>
