--- a/src/app/start-hunt/start-hunt.page.html
+++ b/src/app/start-hunt/start-hunt.page.html
@@ -1,7 +1,5 @@
 <div>
-  <h1>
-    Scavenger Hunt!
-  </h1>
+  <h1>Scavenger Hunt!</h1>
 </div>
 
 <p>Task 0:</p>
@@ -10,18 +8,23 @@
   <ion-input [(ngModel)]="userName" placeholder="your name:"></ion-input>
 </ion-item>
 
-<ion-checkbox labelPlacement="start" [checked]="isCompleted" [disabled]="true"
-              [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}">
+<ion-checkbox
+  labelPlacement="start"
+  [checked]="isCompleted"
+  [disabled]="true"
+  [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}"
+>
   You have completed this task
 </ion-checkbox>
 <ion-item-divider></ion-item-divider>
 
-<ion-button class="start-btn" [disabled]="!isCompleted"
-            [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': isCompleted}"
-            (click)="navigateToTask1()">
+<ion-button
+  class="start-btn"
+  [disabled]="!isCompleted"
+  [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': isCompleted}"
+  (click)="navigateToTask1()"
+>
   Start the scavenger hunt!
 </ion-button>
 
-<ion-button [disabled]="true" class="cancel-button" >
-  Cancel
-</ion-button>
+<ion-button [disabled]="true" class="cancel-button"> Cancel </ion-button>
