--- a/src/app/task-3/task-3.page.html
+++ b/src/app/task-3/task-3.page.html
@@ -5,8 +5,12 @@
 <p>Task 3:</p>
 <p>Scan the QR Code in the ÜK room KR-4!</p>
 
-<ion-checkbox labelPlacement="start" [checked]="isCompleted" [disabled]="true"
-              [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}">
+<ion-checkbox
+  labelPlacement="start"
+  [checked]="isCompleted"
+  [disabled]="true"
+  [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}"
+>
   You have completed this task
 </ion-checkbox>
 
@@ -16,13 +20,15 @@
   Scan QR Code
 </ion-button>
 
-<ion-button class="start-btn" [disabled]="!isCompleted"
-            [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': !isCompleted}"
-            (click)="navigateToTask4()">
+<ion-button
+  class="start-btn"
+  [disabled]="!isCompleted"
+  [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': !isCompleted}"
+  (click)="navigateToTask4()"
+>
   Continue
 </ion-button>
 
-<ion-button [disabled]="false" class="cancel-button"
-            (click)="backToStart()">
+<ion-button [disabled]="false" class="cancel-button" (click)="backToStart()">
   Cancel
 </ion-button>
