--- a/src/app/task-4/task-4.page.html
+++ b/src/app/task-4/task-4.page.html
@@ -5,20 +5,26 @@
 <p>Task 4:</p>
 <p>Turn your phone upside down!</p>
 
-<ion-checkbox labelPlacement="start" [checked]="isCompleted" [disabled]="true"
-              [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}">
+<ion-checkbox
+  labelPlacement="start"
+  [checked]="isCompleted"
+  [disabled]="true"
+  [ngClass]="{'completed-checkbox': isCompleted, 'not-completed-checkbox': !isCompleted}"
+>
   You have completed this task
 </ion-checkbox>
 
 <ion-item-divider></ion-item-divider>
 
-<ion-button class="start-btn" [disabled]="!isCompleted"
-            [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': !isCompleted}"
-            (click)="navigateToScoreboard()">
+<ion-button
+  class="start-btn"
+  [disabled]="!isCompleted"
+  [ngClass]="{'start-btn': isCompleted, 'start-btn-disabled': !isCompleted}"
+  (click)="navigateToScoreboard()"
+>
   Continue
 </ion-button>
 
-<ion-button [disabled]="false" class="cancel-button"
-            (click)="backToStart()">
+<ion-button [disabled]="false" class="cancel-button" (click)="backToStart()">
   Cancel
 </ion-button>
