--- a/src/app/scoreboard/scoreboard.page.html
+++ b/src/app/scoreboard/scoreboard.page.html
@@ -1,11 +1,26 @@
 <div>
   <h1>Scoreboard:</h1>
 </div>
-<ion-list>
-  <ion-item *ngFor="let run of topRuns; let i = index">
-    {{i + 1}}. {{run.name}}: {{run.time.toFixed(2)}} seconds
-  </ion-item>
-</ion-list>
+
+<ion-card-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col><strong>Name</strong></ion-col>
+      <ion-col><strong>Date</strong></ion-col>
+      <ion-col><strong>Schnitzel</strong></ion-col>
+      <ion-col><strong>Potatoes</strong></ion-col>
+    </ion-row>
+
+    @for(run of runs; track run.name){
+      <ion-row class="divider-row">
+        <ion-col>Name: {{run.name}}</ion-col>
+        <ion-col>Date: {{run.date}}</ion-col>
+        <ion-col>Schnitzel: {{run.countSchnitzel}}</ion-col>
+        <ion-col>Potatoes: {{run.countKartoffel}}</ion-col>
+      </ion-row>
+    }
+  </ion-grid>
+</ion-card-content>
 
 <ion-item-divider></ion-item-divider>
 
@@ -15,4 +30,8 @@
 
 <ion-button [disabled]="false" class="start-btn" (click)="navigateToHome()">
   Home
+</ion-button>
+
+<ion-button (click)="clearScoreboard()">
+  clear scoreboard
 </ion-button>
