--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
   Location
 </ion-button>
 
-<ion-item-divider/>
+<ion-item-divider />
 
 <ion-button
   class="start-btn"
@@ -36,9 +36,6 @@
 
 <ion-button [disabled]="true" class="cancel-button"> Cancel</ion-button>
 
-<ion-button
-  class="start-btn"
-  (click)="navigateToScoreboard()"
->
-Go to scoreboard
+<ion-button class="start-btn" (click)="navigateToScoreboard()">
+  Go to scoreboard
 </ion-button>
